interstellar/tests/snapshots/gql_snapshots__parse_group_by_single_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: p
            labels:
              - player
            properties: []
            where_clause: ~
optional_match_clauses: []
with_path_clause: ~
unwind_clauses: []
where_clause: ~
call_clauses: []
let_clauses: []
with_clauses: []
return_clause:
  distinct: false
  items:
    - expression:
        Property:
          variable: p
          property: position
      alias: ~
    - expression:
        Aggregate:
          func: Count
          distinct: false
          expr:
            Variable: "*"
      alias: ~
group_by_clause:
  expressions:
    - Property:
        variable: p
        property: position
having_clause: ~
order_clause: ~
limit_clause: ~
