interstellar/tests/snapshots/gql_snapshots__parse_match_anonymous_node_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: ~
            labels:
              - Person
            properties: []
            where_clause: ~
optional_match_clauses: []
with_path_clause: ~
unwind_clauses: []
where_clause: ~
call_clauses: []
let_clauses: []
with_clauses: []
return_clause:
  distinct: false
  items:
    - expression:
        Literal:
          String: found
      alias: ~
group_by_clause: ~
having_clause: ~
order_clause: ~
limit_clause: ~
