interstellar/tests/snapshots/gql_snapshots__parse_match_delete_with_where_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Mutation:
  match_clause:
    patterns:
      - elements:
          - Node:
              variable: p
              labels:
                - Person
              properties: []
              where_clause: ~
  optional_match_clauses: []
  where_clause:
    expression:
      BinaryOp:
        left:
          Property:
            variable: p
            property: age
        op: Lt
        right:
          Literal:
            Int: 18
  mutations:
    - Delete:
        variables:
          - p
  foreach_clauses: []
  return_clause: ~
